// Scheduled Jobs Service - Cron scheduling for job templates
syntax = "proto3";

package hodei.job;

import "common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Scheduled Job Definition
message ScheduledJob {
    string scheduled_job_id = 1;
    string name = 2;
    string description = 3;
    string template_id = 4;
    string cron_expression = 5;
    string timezone = 6;
    google.protobuf.Timestamp next_execution_at = 7;
    google.protobuf.Timestamp last_execution_at = 8;
    string last_execution_status = 9; // QUEUED, RUNNING, SUCCEEDED, FAILED, ERROR
    bool enabled = 10;
    uint32 max_consecutive_failures = 11;
    uint32 consecutive_failures = 12;
    bool pause_on_failure = 13;
    map<string, string> parameters = 14;
    google.protobuf.Timestamp created_at = 15;
    google.protobuf.Timestamp updated_at = 16;
    string created_by = 17;
}

// Create Scheduled Job Request
message CreateScheduledJobRequest {
    string name = 1;
    string description = 2;
    string template_id = 3;
    string cron_expression = 4;
    string timezone = 5;
    map<string, string> parameters = 6;
    string created_by = 7;
    uint32 max_consecutive_failures = 8;
    bool pause_on_failure = 9;
}

// Create Scheduled Job Response
message CreateScheduledJobResponse {
    ScheduledJob scheduled_job = 1;
}

// Update Scheduled Job Request
message UpdateScheduledJobRequest {
    string scheduled_job_id = 1;
    string description = 2;
    string cron_expression = 3;
    string timezone = 4;
    map<string, string> parameters = 5;
    uint32 max_consecutive_failures = 6;
    bool pause_on_failure = 7;
}

// Update Scheduled Job Response
message UpdateScheduledJobResponse {
    ScheduledJob scheduled_job = 1;
}

// Get Scheduled Job Request
message GetScheduledJobRequest {
    string scheduled_job_id = 1;
}

// Get Scheduled Job Response
message GetScheduledJobResponse {
    ScheduledJob scheduled_job = 1;
}

// List Scheduled Jobs Request
message ListScheduledJobsRequest {
    string template_id = 1; // Optional filter by template
    bool enabled = 2; // Optional filter by enabled status
    uint32 page_size = 3;
    string page_token = 4;
}

// List Scheduled Jobs Response
message ListScheduledJobsResponse {
    repeated ScheduledJob scheduled_jobs = 1;
    string next_page_token = 2;
}

// Delete Scheduled Job Request
message DeleteScheduledJobRequest {
    string scheduled_job_id = 1;
}

// Delete Scheduled Job Response
message DeleteScheduledJobResponse {
    bool success = 1;
}

// Enable/Disable Scheduled Job Request
message SetScheduledJobStatusRequest {
    string scheduled_job_id = 1;
    bool enabled = 2;
}

// Enable/Disable Scheduled Job Response
message SetScheduledJobStatusResponse {
    ScheduledJob scheduled_job = 1;
}

// Trigger Now Request
message TriggerScheduledJobNowRequest {
    string scheduled_job_id = 1;
    string triggered_by = 2;
}

// Trigger Now Response
message TriggerScheduledJobNowResponse {
    string execution_id = 1;
    string job_id = 2;
}

// Get Upcoming Executions Request
message GetUpcomingExecutionsRequest {
    google.protobuf.Timestamp from_time = 1;
    google.protobuf.Timestamp to_time = 2;
    string template_id = 3; // Optional filter
    uint32 limit = 4;
}

// Upcoming Execution
message UpcomingExecution {
    string scheduled_job_id = 1;
    string scheduled_job_name = 2;
    string template_id = 3;
    google.protobuf.Timestamp scheduled_for = 4;
    map<string, string> parameters = 5;
}

// Get Upcoming Executions Response
message GetUpcomingExecutionsResponse {
    repeated UpcomingExecution executions = 1;
}

// Cron Validation Request
message ValidateCronExpressionRequest {
    string cron_expression = 1;
    string timezone = 2;
}

// Cron Validation Response
message ValidateCronExpressionResponse {
    bool valid = 1;
    string error_message = 2;
    google.protobuf.Timestamp next_execution = 3;
    repeated google.protobuf.Timestamp next_10_executions = 4;
}

// Scheduled Job Service
service ScheduledJobService {
    // Create a new scheduled job
    rpc CreateScheduledJob(CreateScheduledJobRequest) returns (CreateScheduledJobResponse);

    // Update an existing scheduled job
    rpc UpdateScheduledJob(UpdateScheduledJobRequest) returns (UpdateScheduledJobResponse);

    // Get a scheduled job by ID
    rpc GetScheduledJob(GetScheduledJobRequest) returns (GetScheduledJobResponse);

    // List scheduled jobs
    rpc ListScheduledJobs(ListScheduledJobsRequest) returns (ListScheduledJobsResponse);

    // Delete a scheduled job
    rpc DeleteScheduledJob(DeleteScheduledJobRequest) returns (DeleteScheduledJobResponse);

    // Enable or disable a scheduled job
    rpc SetScheduledJobStatus(SetScheduledJobStatusRequest) returns (SetScheduledJobStatusResponse);

    // Trigger a scheduled job to run immediately
    rpc TriggerScheduledJobNow(TriggerScheduledJobNowRequest) returns (TriggerScheduledJobNowResponse);

    // Get upcoming executions within a time range
    rpc GetUpcomingExecutions(GetUpcomingExecutionsRequest) returns (GetUpcomingExecutionsResponse);

    // Validate a cron expression
    rpc ValidateCronExpression(ValidateCronExpressionRequest) returns (ValidateCronExpressionResponse);
}
